styles/default.css
/*
 *  $Id$
 *
 *  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
 *  project.
 *
 *  Copyright (C) 1998-2009 OpenLink Software
 *
 *  This project is free software; you can redistribute it and/or modify it
 *  under the terms of the GNU General Public License as published by the
 *  Free Software Foundation; only version 2 of the License, dated June 1991.
 *
 *  This program is distributed in the hope that it will be useful, but
 *  WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 *  General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License along
 *  with this program; if not, write to the Free Software Foundation, Inc.,
 *  51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 *
 */

html {}

body { 
  margin: 0; padding: 0;
  font-family: Gill Sans, Verdana, Helvetica, sans-serif;
  font-size: 9pt; text-align: center}

a, a:visited {color: #242;}
a.describe {margin-right: 6px}

tr:hover {
  background-color: #ddd;}

#PG { width: 100%; 
      text-align: left;
      background-color: #fff;}

#HD { 
  width: 100%; 
  float: left; 
  height: 70px;
  text-align: center; 
  background-image: url(/fct/images/bg_header.png);
  border-bottom: 1px solid #226;}

#HD img { margin: 2px 0 0 0; padding: 0; vertical-align: middle; border: 0;}

#HD h1 { 
  font-size: 14pt; 
  float:left; 
  margin: 0 0 0 20px; 
  vertical-align: top; 
  color: #fff; 
  padding: 0}

#HD h1 a { color: #fff}

#main_menu {
  margin: 0; padding: 0;
  float: right;
  clear: right;
  list-style-type: none;
  list-style-image: none;
  list-style-position: outside;
  list-style-type: none;
  margin-right: 12px;
  min-width: 500px;
}

#main_menu li { float: left }

#main_menu li a {
  color: #e9f2f7;
  display: block;
  font-family: sans-serif;
  font-size: 14px;
  font-weight: normal;
  line-height: 34px;
  padding:0 10px;
  text-shadow:1px 1px 1px #333333;
  text-decoration: none;
}

#main_menu li a.sel {
  -moz-background-clip:border;
  -moz-background-inline-policy:continuous;
  -moz-background-origin:padding;
  -moz-border-radius-topleft:3px;
  -moz-border-radius-topright:3px;
  background:#E4F2FD none repeat scroll 0 0;
  color:#555555;
  text-shadow:1px 1px 1px #C6D9E9;	
}

li#mnu_settings a {
  -moz-background-clip:border;
  -moz-background-inline-policy:continuous;
  -moz-background-origin:padding;
  -moz-border-radius-topleft:3px;
  -moz-border-radius-topright:3px;
  background:#44ee66 none repeat scroll 0 0;
  color:#555555;
  text-shadow:1px 1px 1px #C6D9E9;
  margin-left: 20px;
}

li#mnu_settings ul {}
li#mnu_settings ul li { }

#h1 div.page-resource-uri {float: left}

#hd_l { float: left; clear: left}

#hd_r { float: right; clear: right}

#hd_r img { margin: 15px 10px 0 0; 
            vertical-align: middle; 
            padding-bottom: 3px; 
            background-color: white; }

a.logo { margin-left: 10px; float: left;}

#opl_logo { border: 0; float: left;}

#MD { width: 100%; 
      float: left; 
      margin-top: 0; 
      background-color: #e9f2f7; 
      padding-bottom: 10px; 
      margin-left: auto; margin-right: auto;}

#MD div#settings { 
  margin: 10px;
}

#MD div#settings label { }
#MD div#settings label.ckb {}
#MD div#settings input.ckb {}
#MD div#settings ul { list-style-type: none; padding: 0;}
#MD div#settings ul li { padding: 0;}
#MD div#settings td:hover {background: inherited}
#MD div#settings tr:hover {background: inherited}
#FT { width: 100%; float: left; 
      border-top: 1px solid #335;
      text-align: center;
      padding-top: 10px; }

#ft_b { padding-top: 10px; }

span.copyright { font-size: 8pt; color: #888}

div.page_resource_info {
  width: 100%; float: left; clear: left;
  text-align: left;
  margin: 15px; 
}

div.page_resource_info h2 { display: inline; padding: 0;}

td.rnk { margin: 0; padding: 0; }
img.rnk { float: left; clear: left; margin-top: 1px;}

/*#new_srch { margin-top: 40px; margin-bottom: 40px; width: 100%; text-align: center;}
label.left_txt { margin-right: 10px;}*/

div.expln { margin: 0 100px 5px 100px;}
div.doc_ctr { margin: 10px; }
div.main_actions { float: left; clear: left; width: 100%; text-align: left;}
div.main_expln { float: left; clear: left; text-align: center; width: 100%;}

#res { float: left; clear: left; margin: 5px 0px 0px 0px; width: 800px;}
#res h3 { margin-top: 0; margin-left: 5px;}

#new_search_txt {}

#new_uri_txt {}
#new_lbl_txt {}

input.thr { background-image: url(/fct/images/thrb.gif); 
            background-repeat: no-repeat; 
            background-position: right;}

table.result { clear:left; width: 100%; margin: 3px; font-size: 9pt;}
table.result td { max-width: 350px; overflow: hidden; font-size: 9pt;}
span.iri { font-weight: bold }
span.value { font-weight: bold }

table.dataset_list td { margin: 0 10px 0 10px }
th { text-align: left; }

div.subj_nav { float: left; width: 100%;}

p.subj_desc {
  float: left;
  clear: left;
  width: 750px;
  text-align: left; 
  font-style: italic; 
  font-size: 12pt; 
  margin: 10px; 
  padding: 10px;
  background-color: #fff;
  border: 1px solid black;}

div.subj_nav div.nav { 
  float: right; 
  clear: right;
  text-align: left; 
  width: 200px;
  margin-top: 10px; 
  border-left: 1px solid #ddd; 
}

div.subj_nav div.nav ul { list-style-type: none; padding: 0; margin-left: 10px;}
div.subj_nav div.nav h3 { text-align: left; margin-left: 10px; }

table.description { text-align: left; margin: 10px; float: left;clear: left;}
table.description td { vertical-align: top;}
table.description td.property { white-space: nowrap;}
table.description ul.obj { 
  padding: 0; 
  margin-top: 0; 
  margin-left; 10px; 
  list-style-type: none } /* list-style-type: none} */

#main_srch { 
  margin-top: 15px; 
  margin-left: auto;
  margin-right: auto}

#TAB_ROW { width: 800px; margin-left: auto; margin-right: auto;}
/* ... */

